--- a/FinalProjectPreci.Rmd
+++ b/FinalProjectPreci.Rmd
@@ -14,12 +14,9 @@ library(kableExtra)
 library(readxl)
 
 spreads <- read.csv("spreadspoke_scores.csv")
-teams <- read_csv("nfl_teams.csv")
-stadiums <- read_csv("nfl_stadiums.csv")
 ```
 
-**My Plan**
-I plan to use this data to dig into how well Vegas has done in the NFL sports gambling world, and if there are any possible "holes". An example would be that the Dallas Cowboys generally generate the most revenue, meaning people with big money like them, meaning people with big money *bet* on them. Vegas only cares about getting the money bet on a line 50/50, which means there may be artificial line moves in the direction of a team like the Cowboys that Vegas doesn"t necessarily agree with in their analysis of the game. Another angle I may look at involves combining both the O/U and point spread. Using this info, you can decipher what "score" Vegas thinks it will be. An example would be if the Patriots were playing the Steelers, and the O/U were 48.5, and the point spread was -3.5 Patriots, Vegas is "predicting" a score of 28.5-25. Obviously half points can"t happen, as this is just a thought experiment. I"ve included some of the data below to get an idea:
+
 
 ```{r, echo = FALSE}
 spreads_prep <- spreads %>%
@@ -37,15 +34,45 @@ spreads_prep <- spreads %>%
   ggplot(aes(x = week, y = avgline)) + geom_bar(stat = "identity")) + labs(title = "Average Over/Under Lines by Week", x = "Week", y = "O/U set")
 
 
-spreads_fit <- spreads %>%
+spreads_match <- spreads %>%
   select(schedule_season, team_home, team_away, team_favorite_id, spread_favorite, score_home, score_away, schedule_playoff) %>%
   filter(!is.na(spread_favorite)) %>%
   filter(schedule_playoff == "FALSE") %>%
   filter(schedule_season != 2018) %>%
   filter(schedule_season != 1978) %>%
   mutate(team_home = recode(team_home, "Tampa Bay Buccaneers" = "TB", "Arizona Cardinals" = "ARI", "Atlanta Falcons" = "ATL", "Baltimore Colts" = "IND", "Baltimore Ravens" = "BAL", "Buffalo Bills" = "BUF", "Carolina Panthers" = "CAR", "Chicago Bears" = "CHI", "Cincinnati Bengals" = "CIN", "Cleveland Browns" = "CLE", "Dallas Cowboys" = "DAL", "Denver Broncos" = "DEN", "Detroit Lions" = "DET", "Green Bay Packers" = "GB", "Houston Oilers" = "TEN", "Houston Texans" = "HOU", "Indianapolis Colts" = "IND", "Jacksonville Jaguars" = "JAX", "Kansas City Chiefs" = "KC", "Los Angeles Chargers" = "LAC", "Los Angeles Raiders" = "OAK", "Los Angeles Rams" = "LAR", "Miami Dolphins" = "MIA", "Minnesota Vikings" = "MIN", "New England Patriots" = "NE", "New Orleans Saints" = "NO", "New York Giants" = "NYG", "New York Jets" = "NYJ", "Oakland Raiders" = "OAK", "Philadelphia Eagles" = "PHI", "Phoenix Cardinals" = "ARI", "Pittsburgh Steelers" = "PIT", "San Diego Chargers" = "LAC", "San Francisco 49ers" = "SF", "Seattle Seahawks" = "SEA", "St. Louis Cardinals" = "ARI", "St. Louis Rams" = "LAR", "Tennessee Oilers" = "TEN", "Tennessee Titans" = "TEN", "Washington Redskins" = "WAS", .default = NULL)) %>%
-  mutate(team_away = recode(team_away, "Tampa Bay Buccaneers" = "TB", "Arizona Cardinals" = "ARI", "Atlanta Falcons" = "ATL", "Baltimore Colts" = "IND", "Baltimore Ravens" = "BAL", "Buffalo Bills" = "BUF", "Carolina Panthers" = "CAR", "Chicago Bears" = "CHI", "Cincinnati Bengals" = "CIN", "Cleveland Browns" = "CLE", "Dallas Cowboys" = "DAL", "Denver Broncos" = "DEN", "Detroit Lions" = "DET", "Green Bay Packers" = "GB", "Houston Oilers" = "TEN", "Houston Texans" = "HOU", "Indianapolis Colts" = "IND", "Jacksonville Jaguars" = "JAX", "Kansas City Chiefs" = "KC", "Los Angeles Chargers" = "LAC", "Los Angeles Raiders" = "OAK", "Los Angeles Rams" = "LAR", "Miami Dolphins" = "MIA", "Minnesota Vikings" = "MIN", "New England Patriots" = "NE", "New Orleans Saints" = "NO", "New York Giants" = "NYG", "New York Jets" = "NYJ", "Oakland Raiders" = "OAK", "Philadelphia Eagles" = "PHI", "Phoenix Cardinals" = "ARI", "Pittsburgh Steelers" = "PIT", "San Diego Chargers" = "LAC", "San Francisco 49ers" = "SF", "Seattle Seahawks" = "SEA", "St. Louis Cardinals" = "ARI", "St. Louis Rams" = "LAR", "Tennessee Oilers" = "TEN", "Tennessee Titans" = "TEN", "Washington Redskins" = "WAS", .default = NULL))
+  mutate(team_away = recode(team_away, "Tampa Bay Buccaneers" = "TB", "Arizona Cardinals" = "ARI", "Atlanta Falcons" = "ATL", "Baltimore Colts" = "IND", "Baltimore Ravens" = "BAL", "Buffalo Bills" = "BUF", "Carolina Panthers" = "CAR", "Chicago Bears" = "CHI", "Cincinnati Bengals" = "CIN", "Cleveland Browns" = "CLE", "Dallas Cowboys" = "DAL", "Denver Broncos" = "DEN", "Detroit Lions" = "DET", "Green Bay Packers" = "GB", "Houston Oilers" = "TEN", "Houston Texans" = "HOU", "Indianapolis Colts" = "IND", "Jacksonville Jaguars" = "JAX", "Kansas City Chiefs" = "KC", "Los Angeles Chargers" = "LAC", "Los Angeles Raiders" = "OAK", "Los Angeles Rams" = "LAR", "Miami Dolphins" = "MIA", "Minnesota Vikings" = "MIN", "New England Patriots" = "NE", "New Orleans Saints" = "NO", "New York Giants" = "NYG", "New York Jets" = "NYJ", "Oakland Raiders" = "OAK", "Philadelphia Eagles" = "PHI", "Phoenix Cardinals" = "ARI", "Pittsburgh Steelers" = "PIT", "San Diego Chargers" = "LAC", "San Francisco 49ers" = "SF", "Seattle Seahawks" = "SEA", "St. Louis Cardinals" = "ARI", "St. Louis Rams" = "LAR", "Tennessee Oilers" = "TEN", "Tennessee Titans" = "TEN", "Washington Redskins" = "WAS", .default = NULL)) %>%
+  mutate(team_home = parse_character(team_home)) %>%
+  mutate(team_away = parse_character(team_away)) %>%
+  mutate(team_favorite_id = parse_character(team_favorite_id))
   
+spreads_home_favorites <- spreads_match %>%
+  filter(team_home == team_favorite_id) %>%
+  rename(year = schedule_season, fav_team = team_home, under_team = team_away, home_team = team_favorite_id, spread = spread_favorite, fav_score = score_home, under_score = score_away, playoff = schedule_playoff) %>%
+  mutate(home_fav = TRUE) %>%
+  select(-home_team)
+
+spreads_away_favorites <- spreads_match %>%
+  filter(team_away == team_favorite_id) %>%
+  rename(year = schedule_season, fav_team = team_away, under_team = team_home, away_team = team_favorite_id, spread = spread_favorite, fav_score = score_away, under_score = score_home, playoff = schedule_playoff) %>%
+  mutate(home_fav = FALSE) %>%
+  select(-away_team)
+
+spreads_comb_under <- left_join(spreads_home_favorites, spreads_away_favorites) %>%
+  mutate(diff = under_score - fav_score) %>%
+  filter(diff > spread) %>%
+  mutate(fav_cover = FALSE) %>%
+  mutate(spread_win = under_team)
   
+spreads_comb_fav <- left_join(spreads_home_favorites, spreads_away_favorites) %>%
+  mutate(diff = under_score - fav_score) %>%
+  filter(diff < spread) %>%
+  mutate(fav_cover = TRUE) %>%
+  mutate(spread_win = fav_team)
+
+spreads_tidy <- left_join(spreads_comb_fav, spreads_comb_under)
+```
+
+```{r plots, echo = FALSE}
 ```
 
