--- a/FinalProjectPreci.Rmd
+++ b/FinalProjectPreci.Rmd
@@ -7,72 +7,77 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+# loading libraries here
 library(tidyverse)
 library(dplyr)
 library(knitr)
 library(kableExtra)
 library(readxl)
+library(stringr)
 
+#reading in our csv
 spreads <- read.csv("spreadspoke_scores.csv")
 ```
 
 
 
 ```{r, echo = FALSE}
-spreads_prep <- spreads %>%
-  filter(!is.na(schedule_week)) %>%
-  mutate(week = recode_factor(schedule_week, "1" = 1, "2" = 2, "3" = 3, "4" = 4, "5" = 5, "6" = 6, "7" = 7, "8" = 8, "9" = 9, "10" = 10, "11" = 11, "12" = 12, "13" = 13, "14" = 14, "15" = 15, "16" = 16, "17" = 17, "18" = 18)) %>%
-  filter(!is.na(schedule_week)) %>%
-  filter(!is.na(over_under_line)) %>%
-  mutate(over_under_line = parse_number(over_under_line)) %>%
-  group_by(week, over_under_line) %>%
-  summarize(avgline = sum(over_under_line) / 825) %>%
-  glimpse()
-
-
-(spreads_plot <- spreads_prep %>%
-  ggplot(aes(x = week, y = avgline)) + geom_bar(stat = "identity")) + labs(title = "Average Over/Under Lines by Week", x = "Week", y = "O/U set")
-
-
+#Here we're starting to tidy the data
 spreads_match <- spreads %>%
-  select(schedule_season, team_home, team_away, team_favorite_id, spread_favorite, score_home, score_away, schedule_playoff) %>%
+ #These are only subjects I'm interested in
+   select(schedule_season, team_home, team_away, team_favorite_id, spread_favorite, score_home, score_away, schedule_playoff, weather_temperature) %>%
+  #Filtering out data we can't really use
   filter(!is.na(spread_favorite)) %>%
   filter(schedule_playoff == "FALSE") %>%
   filter(schedule_season != 2018) %>%
   filter(schedule_season != 1978) %>%
+  #We need the team names to fit the favorite ID
   mutate(team_home = recode(team_home, "Tampa Bay Buccaneers" = "TB", "Arizona Cardinals" = "ARI", "Atlanta Falcons" = "ATL", "Baltimore Colts" = "IND", "Baltimore Ravens" = "BAL", "Buffalo Bills" = "BUF", "Carolina Panthers" = "CAR", "Chicago Bears" = "CHI", "Cincinnati Bengals" = "CIN", "Cleveland Browns" = "CLE", "Dallas Cowboys" = "DAL", "Denver Broncos" = "DEN", "Detroit Lions" = "DET", "Green Bay Packers" = "GB", "Houston Oilers" = "TEN", "Houston Texans" = "HOU", "Indianapolis Colts" = "IND", "Jacksonville Jaguars" = "JAX", "Kansas City Chiefs" = "KC", "Los Angeles Chargers" = "LAC", "Los Angeles Raiders" = "OAK", "Los Angeles Rams" = "LAR", "Miami Dolphins" = "MIA", "Minnesota Vikings" = "MIN", "New England Patriots" = "NE", "New Orleans Saints" = "NO", "New York Giants" = "NYG", "New York Jets" = "NYJ", "Oakland Raiders" = "OAK", "Philadelphia Eagles" = "PHI", "Phoenix Cardinals" = "ARI", "Pittsburgh Steelers" = "PIT", "San Diego Chargers" = "LAC", "San Francisco 49ers" = "SF", "Seattle Seahawks" = "SEA", "St. Louis Cardinals" = "ARI", "St. Louis Rams" = "LAR", "Tennessee Oilers" = "TEN", "Tennessee Titans" = "TEN", "Washington Redskins" = "WAS", .default = NULL)) %>%
   mutate(team_away = recode(team_away, "Tampa Bay Buccaneers" = "TB", "Arizona Cardinals" = "ARI", "Atlanta Falcons" = "ATL", "Baltimore Colts" = "IND", "Baltimore Ravens" = "BAL", "Buffalo Bills" = "BUF", "Carolina Panthers" = "CAR", "Chicago Bears" = "CHI", "Cincinnati Bengals" = "CIN", "Cleveland Browns" = "CLE", "Dallas Cowboys" = "DAL", "Denver Broncos" = "DEN", "Detroit Lions" = "DET", "Green Bay Packers" = "GB", "Houston Oilers" = "TEN", "Houston Texans" = "HOU", "Indianapolis Colts" = "IND", "Jacksonville Jaguars" = "JAX", "Kansas City Chiefs" = "KC", "Los Angeles Chargers" = "LAC", "Los Angeles Raiders" = "OAK", "Los Angeles Rams" = "LAR", "Miami Dolphins" = "MIA", "Minnesota Vikings" = "MIN", "New England Patriots" = "NE", "New Orleans Saints" = "NO", "New York Giants" = "NYG", "New York Jets" = "NYJ", "Oakland Raiders" = "OAK", "Philadelphia Eagles" = "PHI", "Phoenix Cardinals" = "ARI", "Pittsburgh Steelers" = "PIT", "San Diego Chargers" = "LAC", "San Francisco 49ers" = "SF", "Seattle Seahawks" = "SEA", "St. Louis Cardinals" = "ARI", "St. Louis Rams" = "LAR", "Tennessee Oilers" = "TEN", "Tennessee Titans" = "TEN", "Washington Redskins" = "WAS", .default = NULL)) %>%
+  #I don't want it as factors I think, so we'll make them characters
   mutate(team_home = parse_character(team_home)) %>%
   mutate(team_away = parse_character(team_away)) %>%
   mutate(team_favorite_id = parse_character(team_favorite_id))
   
 spreads_home_favorites <- spreads_match %>%
+  #Instead of using if/then's in mutates to make the data usable, I just tried dividing up the frames then joining them again
   filter(team_home == team_favorite_id) %>%
-  rename(year = schedule_season, fav_team = team_home, under_team = team_away, home_team = team_favorite_id, spread = spread_favorite, fav_score = score_home, under_score = score_away, playoff = schedule_playoff) %>%
+  rename(year = schedule_season, fav_team = team_home, under_team = team_away, home_team = team_favorite_id, spread = spread_favorite, fav_score = score_home, under_score = score_away, playoff = schedule_playoff, temp = weather_temperature) %>%
   mutate(home_fav = TRUE) %>%
   select(-home_team)
 
+#Continued on what I did in above section, just for away teams
 spreads_away_favorites <- spreads_match %>%
   filter(team_away == team_favorite_id) %>%
-  rename(year = schedule_season, fav_team = team_away, under_team = team_home, away_team = team_favorite_id, spread = spread_favorite, fav_score = score_away, under_score = score_home, playoff = schedule_playoff) %>%
+  rename(year = schedule_season, fav_team = team_away, under_team = team_home, away_team = team_favorite_id, spread = spread_favorite, fav_score = score_away, under_score = score_home, playoff = schedule_playoff, temp = weather_temperature) %>%
   mutate(home_fav = FALSE) %>%
   select(-away_team)
 
-spreads_comb_under <- left_join(spreads_home_favorites, spreads_away_favorites) %>%
+
+#Adding an important topic: did they cover?
+spreads_comb_under <- left_join(spreads_home_favorites, spreads_away_favorites, .id = "source") %>%
   mutate(diff = under_score - fav_score) %>%
   filter(diff > spread) %>%
   mutate(fav_cover = FALSE) %>%
   mutate(spread_win = under_team)
   
-spreads_comb_fav <- left_join(spreads_home_favorites, spreads_away_favorites) %>%
+#Expanding on what I did above
+spreads_comb_fav <- left_join(spreads_home_favorites, spreads_away_favorites, .id = "source") %>%
   mutate(diff = under_score - fav_score) %>%
   filter(diff < spread) %>%
   mutate(fav_cover = TRUE) %>%
   mutate(spread_win = fav_team)
 
-spreads_tidy <- left_join(spreads_comb_fav, spreads_comb_under)
+#My joins aren't working. Will work on that tonight.
+spreads_tidy <- left_join(spreads_comb_fav, spreads_comb_under, .id = "source")
 ```
 
 ```{r plots, echo = FALSE}
+(cold_plot <- spreads_tidy %>%
+  filter(home_fav == TRUE) %>%
+  filter(temp < 60) %>%
+  mutate(fav_cover = as.numeric(fav_cover)) %>%
+  group_by(fav_team) %>%
+  ggplot(aes(x = year, y = fav_cover)) + geom_line())
 ```
 
